# gradientlab

./: .gitignore  README.md  pyproject.toml
notebooks/: test-a-tokenizer.ipynb  testtok.ipynb
notebooks/experiments/exp20251016_0_lm_20m_polyrelu_lm_vanilla_fineweb_ita/: generate.ipynb
notebooks/experiments/exp20251025_0_vlm_20m_in1k/: generate.ipynb
notebooks/experiments/exp20251025_0_vlm_20m_in1k/trash/: data-viz.ipynb
notebooks/experiments/exp20251108_0_lm_kda_20m_nucleotides/: generate.ipynb  test_task_collate.ipynb
notebooks/experiments/exp20251108_0_lm_kda_20m_nucleotides_tasks/: generate.ipynb
notebooks/experiments/exp20251109_0_lm_kda_20m_nucleotides_std/: data.ipynb  generate.ipynb
notebooks/experiments/exp20251118_0_lm_30m/: data.ipynb  embed_ds.ipynb
notebooks/experiments/exp20251224_0_qwen_rl_coin_change/: dataset.ipynb  swin.ipynb  textimage.ipynb
notebooks/experiments/exp20251227_imagetextzip/: predict.ipynb  textimage.ipynb
notebooks/experiments/exp20251230_ocrmono/: arxvipapers.ipynb  datagen.ipynb
notebooks/experiments/exp20260108_grokking/: landscape_analysis.ipynb
notebooks/trash/: img-textify.ipynb
src/gradientlab/data_utils/: experiment_path.py  text_ds_packing.py
src/gradientlab/experiments/exp20251016_0_lm_20m_polyrelu_lm_vanilla_fineweb_ita/: __main__.py  config.py  exp_config.py  (+1 more)
src/gradientlab/neuralblocks/: model_types.py
src/gradientlab/nn_landscape/: __init__.py  config.py  directions.py  evaluator.py  landscape.py  trainer_integration.py  visualization.py
src/gradientlab/tokenizers/: qwen_tokenizer.py
(+87 files in other folders)
